--- a/react-app/src/components/FoodTrucks/MyFoodTruckCard.css
+++ b/react-app/src/components/FoodTrucks/MyFoodTruckCard.css
@@ -1,6 +1,3 @@
-.my-food-truck-card-container {
-    
-}
 
 .food-truck-card-component-details-link {
     text-decoration: none;
